maintemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
           "type": "string",
           "metadata": {
                "description": "Select Location",
                "allowedValues": [
                    "eastus",
                    "uksouth",
                    "uknorth"
                ]
            },
            "defaultValue":"uksouth"
        },

        "vnet_addrspace": {
           "type": "string",
           "metadata": {
                "description": "VNET Address Space" 
            },
            "defaultValue":"10.0.0.0/16"
        },
        "subnetcount": {
           "type": "int",
           "metadata": {
                "description": "Total number of user subnets"
            },
            "defaultValue":3
        },
        "subnet_addrspace": {
           "type": "array",
           "metadata": {
                "description": "List of subnet prefixes"
            },
        "defaultValue": ["10.0.1.0/24","10.0.2.0/24","10.0.3.0/24"]
        },
        "subnet_names": {
           "type": "array",
           "metadata": {
                "description": "List of subnet names"
            },
            "defaultValue": ["subnet1","subnet2","subnet3"]
        }
    },
    "variables": {},
    "resources": [
    {
        "name": "demovnet",
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2019-11-01",
        "location": "[resourceGroup().location]",
        "tags": {
            "displayName": "demovnet"
        },
        "properties": {
            "addressSpace": {
                "addressPrefixes": [
                    "[parameters('vnet_addrspace')]"
                ]
            },
            "subnets": [
                {
                    "name": "[parameters('subnet_names')[0]]",
                    "properties": {
                        "addressPrefix": "[parameters('subnet_addrspace')[0]]"
                    }
                },
                {
                    "name": "[parameters('subnet_names')[1]]",
                    "properties": {
                        "addressPrefix": "[parameters('subnet_addrspace')[1]]"
                    }
                },
                {
                    "name": "[parameters('subnet_names')[2]]",
                    "properties": {
                        "addressPrefix": "[parameters('subnet_addrspace')[2]]"
                    }
                }
            ]
        }
    },
    {
        "name": "[concat('nic',parameters('subnet_names')[copyIndex()])]",
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2019-11-01",
        "location": "[resourceGroup().location]",
        "tags": {
            "name":"[concat(parameters('subnet_names')[copyIndex()])]"
            },
        "dependsOn": [
            "[resourceId('Microsoft.Network/virtualNetworks', 'demovnet')]",
            "[resourceId('Microsoft.Network/networkSecurityGroups','vnet-nsg')]"
        ],
        "properties": {
            "ipConfigurations": [
                {
                    "name": "[concat('ipconfig',copyIndex())]",
                    "properties": {
                        "privateIPAllocationMethod": "Dynamic",
                        "subnet": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'demovnet', parameters('subnet_names')[copyIndex()])]"
                        }
                    }
                }
            ],
            "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups','vnet-nsg')]"
            }
        },
        "copy": {
            "name":"subnet_copy",
            "count":"[length(parameters('subnet_addrspace'))]"
        }
    },
    {
        "name": "vnet-nsg",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2019-11-01",
        "location": "[resourceGroup().location]",
        "properties": {
            "securityRules": [
                {
                    "name": "allowSSH",
                    "properties": {
                        "description": "allow SSH",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "22",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "allowHTTP",
                    "properties": {
                        "description": "allow HTTP",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "80",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 200,
                        "direction": "Inbound"
                    }
                }
            ]
        }
    },
    {
        "name": "[concat(parameters('subnet_names')[copyIndex()],'vmstorage')]",
        "type": "Microsoft.Storage/storageAccounts",
        "apiVersion": "2019-06-01",
        "location": "[resourceGroup().location]",
        "tags": {
            "displayName": "ubuntuVM Storage Account"
        },
        "sku": {
            "name": "Standard_LRS"
        },
        "kind": "Storage",
        "copy": {
            "name":"storage_copy",
            "count":"[length(parameters('subnet_addrspace'))]"
        }
    },
    {
        "name":  "[concat(parameters('subnet_names')[copyIndex()],'VM')]",
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2019-07-01",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkInterfaces',concat('nic',parameters('subnet_names')[copyIndex()]))]"
        ],
        "tags": {
            "displayName": "ubuntuVM"
        },
        "properties": {
            "hardwareProfile": {
                "vmSize": "Standard_A2_v2"
            },
            "osProfile": {
                "computerName": "[concat(parameters('subnet_names')[copyIndex()],'VMOSProfile')]",
                "adminUsername": "adminUsername",
                "adminPassword": "adminPassword"
            },
            "storageProfile": {
                "imageReference": {
                    "publisher": "Canonical",
                    "offer": "UbuntuServer",
                    "sku": "16.04-LTS",
                    "version": "latest"
                },
                "osDisk": {
                    "name": "[concat(parameters('subnet_names')[copyIndex()],'osDisk')]",
                    "caching": "ReadWrite",
                    "createOption": "FromImage"
                }
            },
            "networkProfile": {
                "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces',concat('nic',parameters('subnet_names')[copyIndex()]))]"
                    }
                ]
            },
            "diagnosticsProfile": {
                "bootDiagnostics": {
                    "enabled": true,
                    "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower(concat(parameters('subnet_names')[copyIndex()],'vmstorage')))).primaryEndpoints.blob]"
                }
            }
        },
          "copy": {
            "name":"vm_copy",
            "count":"[length(parameters('subnet_addrspace'))]"
        }
    },
    {
        "name": "config-app",
        "type": "extensions",
        "location": "[resourceGroup().location]",
        "apiVersion": "2019-03-01",
        "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/',concat(parameters('subnet_names')[copyIndex()],'VM'))]"
        ],
        "tags": {
            "displayName": "config-app"
        },
        "properties": {
            "publisher": "Microsoft.Azure.Extensions",
            "type": "CustomScript",
            "typeHandlerVersion": "2.1",
            "autoUpgradeMinorVersion": true,
            "settings": {
            },
            "protectedSettings": {
            "commandToExecute": "sh userdata.sh",
            "fileUris": ["https://github.com/MyProject/Archive/hello.sh"
            ]  
            }
        }
        }
    ],
    "outputs": {}
}
